buildscript {
    repositories {
        maven {
            url "https://plugins.gradle.org/m2/"
        }
        jcenter()
    }
    dependencies {
        classpath "io.freefair.gradle:lombok-plugin:5.3.0"
        classpath "com.github.jengelman.gradle.plugins:shadow:6.1.0"
    }
}

plugins {
    id "java"
    id "com.diffplug.spotless" version "5.5.1"
    id "com.github.johnrengelman.shadow" version "6.1.0"
    id "com.github.spotbugs" version "4.6.0"
}

apply plugin: "io.freefair.lombok"
apply plugin: "com.github.johnrengelman.shadow"

repositories {
    jcenter()
    mavenCentral()
}

dependencies {
    implementation "org.jsoup:jsoup:${project.properties['jsoup_version']}"
    implementation "com.konghq:unirest-java:${project.properties['unirest_version']}"
    implementation "net.sourceforge.argparse4j:argparse4j:${project.properties['argparse4j_version']}"
    testImplementation "org.junit.jupiter:junit-jupiter-api:${project.properties['jupiter_version']}"
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
}


group = "com.crawler"
version = "0.0.1-SNAPSHOT"
sourceCompatibility = "11"


jar {
    manifest {
        attributes "Main-Class": "com.crawler.WebCrawler"
    }

    from {
        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
    }
}

tasks.named('test') {
    useJUnitPlatform()
}


spotless {
    java {
        googleJavaFormat("1.9").aosp()
        target fileTree(rootDir) {
            include '**/*.java'
        }
    }
}
